--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
+    "cloudinary": "^2.5.1",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-countup": "^6.5.3",
